@@ -1,6 +1,11 @@
 ParamHelpers_1.3:
+- Vector params (num, int and log) can now have component names
+  Functions that produce such vector values (e.g. sampleValue or dfRowsToList)
+  will name the components of this vector automatically. 
+  The user can also call setValueCNames in his own code.
 - new functions
 -- getOptPathCols
+-- setValueCNames
 
 ParamHelpers_1.2:
 - normal parameters can now have a default value
